--- a/odonto/templates/opal/patient_detail.html
+++ b/odonto/templates/opal/patient_detail.html
@@ -71,7 +71,14 @@
                 </a>
                   {% endif %}
               {% else %}
-                <a href="{% url 'odonto-view-fp17' episode.pk %}" class="btn btn-small btn-default">
+                <a
+                  {% if episode.category_name == "FP17" %}
+                    href="/#/summary/fp17/{{ object.pk }}/{{ episode.pk }}"
+                  {% endif %}
+                  {% if episode.category_name == "FP17O" %}
+                    href="/#/summary/fp17o/{{ object.pk }}/{{ episode.pk }}"
+                  {% endif %}
+                  class="btn btn-small btn-default">
                   View
                 </a>
               {% endif %}
