--- a/odonto/templates/pathway/templates/check_pathway.html
+++ b/odonto/templates/pathway/templates/check_pathway.html
@@ -2,7 +2,16 @@
 
 {% block pathway_body %}
 <span ng-show="isFormValid === true">
-  {% include pathway.summary_template %}
+  <div class="row">
+    <div class="row"> <!-- Start demographics banner -->
+      <div class="col-md-8">
+        <p>
+          Please review the details of this submission before sending to the BSA
+        </p>
+      </div>
+    </div> <!-- end demographics banner -->
+    {% include pathway.summary_template with pathway=1 %}
+  </div>
 </span>
 <span ng-show="isFormValid === false">
   {{ block.super }}
