--- a/odonto/templates/forms/orthodontic_treatment_form.html
+++ b/odonto/templates/forms/orthodontic_treatment_form.html
@@ -40,7 +40,7 @@
 </div>
 <div class="row content-offset-20">
   <div class="col-md-3">
-      {% datepicker field="OrthodonticTreatment.date_of_completion" style="vertical" %}
+      {% odonto_datepicker field="OrthodonticTreatment.date_of_completion" style="vertical" %}
   </div>
 </div>
 
