--- a/odontotheme/templates/_helpers/extraction_chart.html
+++ b/odontotheme/templates/_helpers/extraction_chart.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row content-offset-10">
     <div class="col-md-6">
       <div class="right">
         {% chart_tooth "UR8" %}
@@ -49,30 +49,30 @@
   <div class="row">
     <div class="col-md-6">
       <div class="right">
-        {% chart_tooth "LR8" %}
-        {% chart_tooth "LR7" %}
-        {% chart_tooth "LR6" %}
-        {% chart_tooth "LR5" %}
-        {% chart_tooth "LR4" %}
-        {% chart_tooth "LR3" %}
-        {% chart_tooth "LR2" %}
-        {% chart_tooth "LR1" %}
+        {% chart_tooth "LR8" label=0 %}
+        {% chart_tooth "LR7" label=0 %}
+        {% chart_tooth "LR6" label=0 %}
+        {% chart_tooth "LR5" label=0 %}
+        {% chart_tooth "LR4" label=0 %}
+        {% chart_tooth "LR3" label=0 %}
+        {% chart_tooth "LR2" label=0 %}
+        {% chart_tooth "LR1" label=0 %}
       </div>
     </div>
     <div class="col-md-6">
       <div class="left">
-        {% chart_tooth "LL1" %}
-        {% chart_tooth "LL2" %}
-        {% chart_tooth "LL3" %}
-        {% chart_tooth "LL4" %}
-        {% chart_tooth "LL5" %}
-        {% chart_tooth "LL6" %}
-        {% chart_tooth "LL7" %}
-        {% chart_tooth "LL8" %}
+        {% chart_tooth "LL1" label=0 %}
+        {% chart_tooth "LL2" label=0 %}
+        {% chart_tooth "LL3" label=0 %}
+        {% chart_tooth "LL4" label=0 %}
+        {% chart_tooth "LL5" label=0 %}
+        {% chart_tooth "LL6" label=0 %}
+        {% chart_tooth "LL7" label=0 %}
+        {% chart_tooth "LL8" label=0 %}
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row content-offset-10">
     <div class="col-md-6">
       <div class="right">
         {% chart_tooth "LRE" %}
