change the radio graph to vertical to match other input fields

--- a/odonto/templates/forms/orthodontic_data_set_form.html
+++ b/odonto/templates/forms/orthodontic_data_set_form.html
@@ -1,8 +1,8 @@
 {% load forms %}
 {% load odonto_forms %}
 <div class="row content-offset-20">
-  <div class="col-md-4">
-    {% input field="OrthodonticDataSet.radiograph" %}
+  <div class="col-md-3">
+    {% input field="OrthodonticDataSet.radiograph" style="vertical" %}
   </div>
 </div>
 <div class="row content-offset-20">
