--- a/odonto/templates/forms/orthodontic_assessment_form.html
+++ b/odonto/templates/forms/orthodontic_assessment_form.html
@@ -13,7 +13,7 @@
 </div>
 <div class="row content-offset-20">
   <div class="col-md-3">
-    {% input field="OrthodonticAssessment.iotn" style="vertical" %}
+    {% number field="OrthodonticAssessment.iotn" min=1 max=5 %}
   </div>
   <div class="col-md-3 col-md-offset-1">
     {% input field="OrthodonticAssessment.aesthetic_component" style="vertical" %}
