Adds a context processor and refactors all the get unsubmitted logic into the episode categories, adds the counts to a template context processor

--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -23,12 +23,12 @@
             {% if roles.is_dentist %}
               <li>
                 <a href="{% url 'odonto-unsubmitted-fp17s' %}">
-                  Unsubmitted
+                  Unsubmitted <span class="badge">{{ episode_counts.unsubmitted }}</span>
                 </a>
               </li>
               <li>
                 <a href="{% url 'odonto-open-fp17s' %}">
-                  Open
+                  Open <span class="badge">{{ episode_counts.open }}</span>
                 </a>
               </li>
             {% endif %}
