cleans up commentted out code in the css

--- a/odonto/templates/open_list.html
+++ b/odonto/templates/open_list.html
@@ -24,7 +24,7 @@
             {% endif %}
             {% if episode.category_name == "FP17O" %}
               {{ episode.orthodontictreatment_set.get.date_of_completion }}
-            {% endif %
+            {% endif %}
           </td>
 
           <td>
