Adds an add patient pathway that sends an email if multiple patients are added with that name and password

--- a/odonto/templates/pathway/steps/step_base_template.html
+++ b/odonto/templates/pathway/steps/step_base_template.html
@@ -1,9 +1,11 @@
 {% load forms %}
 <div pathway-step="{{ step.get_api_name }}">
+  {% block heading %}
   <div class="row">
     <h2>
       {{ step.get_display_name }}
     </h2>
   </div>
+  {% endblock %}
   {% include step.get_template %}
 </div>
