removes the declaration as we are no longer using that. The list views will only show open episodes and other tweaks

--- a/odonto/templates/pathway/templates/check_pathway.html
+++ b/odonto/templates/pathway/templates/check_pathway.html
@@ -29,7 +29,7 @@
   <strong class="help-block">Please fix the above errors</strong>
 </div>
 
-<div class="row offset-below">
+<div class="row offset-below content-offset-25">
   <div class="col-md-6">
     <button ng-show="showSummary === false"
       class="btn btn-lg btn-primary btn-save"
