--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -417,7 +417,7 @@ label{
             color: #124c91;
         }
 
-        &:hover, a:hover{
+        &:hover a, a:hover, &:hover{
             background-color: #2c64a8;
             color: white;
             cursor: pointer;
