Puts ethnicity in the demographics form and in the add patient form

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -28,6 +28,9 @@
   <div class="col-md-5">
     {% charfield field="Demographics.phone_number" style="vertical" element_name="tel" %}
   </div>
+  <div class="col-md-5 col-md-offset-1">
+    {% select field="Demographics.ethnicity" required=True style="vertical" %}
+  </div>
 </div>
 <div class="row">
   <div class="col-md-5">
