--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -34,12 +34,12 @@
 </div>
 <div class="row">
   <div class="col-md-5">
-    {% charfield field="Demographics.house_number_or_name" style="vertical" %}
+    {% charfield field="Demographics.house_number_or_name" style="vertical" required=True %}
   </div>
 </div>
 <div class="row">
   <div class="col-md-5">
-    {% charfield field="Demographics.street" maxlength="32" style="vertical" %}
+    {% charfield field="Demographics.street" maxlength="32" style="vertical" required=True %}
   </div>
 </div>
 <div class="row">
