Fix the rendering of dates, no one wants to see UTC

--- a/odonto/templates/records/orthodontic_assessment.html
+++ b/odonto/templates/records/orthodontic_assessment.html
@@ -23,14 +23,14 @@
   <br />
 </span>
 <span ng-show="item.date_of_referra">
-  [[ item.date_of_referral ]]
+  [[ item.date_of_referral | displayDate ]]
   <br />
 </span>
 <span ng-show="item.date_of_assessment">
-  [[ item.date_of_assessment ]]
+  [[ item.date_of_assessment | displayDate ]]
   <br />
 </span>
 <span ng-show="item.date_of_appliance_fitted">
-  [[ item.date_of_appliance_fitted ]]
+  [[ item.date_of_appliance_fitted | displayDate ]]
   <br />
 </span>
