--- a/odonto/templates/records/orthodontic_treatment.html
+++ b/odonto/templates/records/orthodontic_treatment.html
@@ -39,6 +39,6 @@
   <br />
 </span>
 <span ng-show="item.date_of_completion">
-  [[ item.date_of_completion ]]
+  [[ item.date_of_completion | displayDate ]]
   <br />
 </span>
