--- a/odonto/templates/records/orthodontic_assessment.html
+++ b/odonto/templates/records/orthodontic_assessment.html
@@ -1,36 +1,16 @@
-<span ng-show="item.assessment_and_review">
-  Assessment And Review
-  <br />
-</span>
-<span ng-show="item.assess_and_refuse_treatment">
-  Assess & refuse treatment
-  <br />
-</span>
-<span ng-show="item.assess_and_appliance_fitted">
-  Assess & appliance fitted
-  <br />
-</span>
-<span ng-show="item.iotn">
-  [[ item.iotn ]]
-  <br />
-</span>
-<span ng-show="item.aesthetic_component">
-  [[ item.aesthetic_component ]]
-  <br />
-</span>
-<span ng-show="item.iotn_not_applicable">
-  IOTN not applicable
-  <br />
-</span>
-<span ng-show="item.date_of_referra">
-  [[ item.date_of_referral | displayDate ]]
-  <br />
-</span>
-<span ng-show="item.date_of_assessment">
-  [[ item.date_of_assessment | displayDate ]]
-  <br />
-</span>
-<span ng-show="item.date_of_appliance_fitted">
-  [[ item.date_of_appliance_fitted | displayDate ]]
-  <br />
-</span>
+{% load odonto_subrecords %}
+<div class="row">
+  <div class="col-md-6">
+    <table class="table table-striped">
+        {% table_row_field_display "OrthodonticAssessment.assessment_and_review" %}
+        {% table_row_field_display "OrthodonticAssessment.assess_and_refuse_treatment" %}
+        {% table_row_field_display "OrthodonticAssessment.assess_and_appliance_fitted" %}
+        {% table_row_field_display "OrthodonticAssessment.iotn" %}
+        {% table_row_field_display "OrthodonticAssessment.iotn_not_applicable" %}
+        {% table_row_field_display "OrthodonticAssessment.aesthetic_component" %}
+        {% table_row_field_display "OrthodonticAssessment.date_of_referral" %}
+        {% table_row_field_display "OrthodonticAssessment.date_of_assessment" %}
+        {% table_row_field_display "OrthodonticAssessment.date_of_appliance_fitted" %}
+    </table>
+  </div>
+</div>
