--- a/odonto/templates/records/orthodontic_treatment.html
+++ b/odonto/templates/records/orthodontic_treatment.html
@@ -1,44 +1,19 @@
-<span ng-show="item.patient_failed_to_return">
-  Treatment abandoned - patient failed to return
-  <br />
-</span>
-<span ng-show="item.patient_requested_stop">
-  Treatment abandoned - patient requested
-  <br />
-</span>
-<span ng-show="item.treatment_discontinued">
-  Treatment Discontinued
-  <br />
-</span>
-<span ng-show="item.treatment_completed">
-  Treatment Completed
-  <br />
-</span>
-<span ng-show="item.par_scores_calculated">
-  PAR
-  <br />
-</span>
-<span ng-show="item.iotn">
-  [[ item.iotn ]]
-  <br />
-</span>
-<span ng-show="item.aesthetic_component">
-  [[ item.aesthetic_component ]]
-  <br />
-</span>
-<span ng-show="item.iotn_not_applicable">
-  IOTN not applicable
-  <br />
-</span>
-<span ng-show="item.repair">
-  Repair to appliance fitted by another dentist
-  <br />
-</span>
-<span ng-show="item.replacement">
-  Regulation 11 replacement appliance
-  <br />
-</span>
-<span ng-show="item.date_of_completion">
-  [[ item.date_of_completion | displayDate ]]
-  <br />
-</span>
+{% load odonto_subrecords %}
+<div class="row">
+  <div class="col-md-6">
+    <table class="table table-striped">
+      {% table_row_field_display "OrthodonticTreatment.patient_failed_to_return" %}
+      {% table_row_field_display "OrthodonticTreatment.patient_requested_stop" %}
+      {% table_row_field_display "OrthodonticTreatment.treatment_discontinued" %}
+      {% table_row_field_display "OrthodonticTreatment.treatment_completed" %}
+      {% table_row_field_display "OrthodonticTreatment.par_scores_calculated" %}
+      {% table_row_field_display "OrthodonticTreatment.iotn" %}
+      {% table_row_field_display "OrthodonticTreatment.iotn_not_applicable" %}
+      {% table_row_field_display "OrthodonticTreatment.aesthetic_component" %}
+      {% table_row_field_display "OrthodonticTreatment.repair" %}
+      {% table_row_field_display "OrthodonticTreatment.replacement" %}
+      {% table_row_field_display "OrthodonticTreatment.date_of_completion" %}
+    </table>
+  </div>
+</div>
+
