Adds a filter that return all True fields for the extractions model so that we can render the summary with palmer notation

--- a/odonto/templates/partials/fp17_o_summary.html
+++ b/odonto/templates/partials/fp17_o_summary.html
@@ -5,5 +5,6 @@
 {% subrecord_row models.Fp17Exemptions pathway=pathway %}
 
 {% subrecord_row models.OrthodonticDataSet pathway=pathway %}
+{% subrecord_row models.ExtractionChart pathway=pathway %}
 {% subrecord_row models.OrthodonticAssessment pathway=pathway %}
 {% subrecord_row models.OrthodonticTreatment pathway=pathway %}
