Adds inline properties to style the email tables to normalise their appearance in emails

--- a/odonto/templates/emails/response_summary.html
+++ b/odonto/templates/emails/response_summary.html
@@ -3,7 +3,7 @@
   <h1>{{ title }}</h1>
   {% for section_title, section in summary.items %}
   <h3>{{ section_title }}</h3>
-  <table>
+  <table table width="200" cellpadding="0" cellspacing="0" border="0">
     {% for field, value in section.items %}
     <tr>
       <td>{{ field }}</td>
