--- a/odonto/templates/emails/submission_sent.html
+++ b/odonto/templates/emails/submission_sent.html
@@ -6,7 +6,7 @@
   <h1>{{ title }}</h1>
   {% endif %}
   <h3>Summary</h4>
-  <table>
+  <table width="200" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td>Total Success</td><td><strong>{{ total_success}}</strong></td>
     </tr>
@@ -16,7 +16,7 @@
   </table>
   <h3>Breakdown</h4>
   <h4>FP17s</h4>
-  <table>
+  <table width="200" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td>Success</td><td><strong>{{ fp17_success_count }}</strong></td>
     </tr>
@@ -25,7 +25,7 @@
     </tr>
   </table>
   <h4>FP17Os</h4>
-  <table>
+  <table table width="200" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td>Success</td><td><strong>{{ fp17o_success_count }}</strong></td>
     </tr>
