--- a/odonto/templates/emails/response_summary.html
+++ b/odonto/templates/emails/response_summary.html
@@ -3,11 +3,11 @@
   <h1>{{ title }}</h1>
   {% for section_title, section in summary.items %}
   <h3>{{ section_title }}</h3>
-  <table table width="200" cellpadding="0" cellspacing="0" border="0">
+  <table table width="280" cellpadding="0" cellspacing="0" border="0">
     {% for field, value in section.items %}
     <tr>
-      <td>{{ field }}</td>
-      <td>{{ value }}</td>
+      <td align="left">{{ field }}</td>
+      <td align="right">{{ value }}</td>
     </tr>
     {% endfor %}
   </table>
