--- a/odonto/templates/emails/submission_sent.html
+++ b/odonto/templates/emails/submission_sent.html
@@ -6,31 +6,31 @@
   <h1>{{ title }}</h1>
   {% endif %}
   <h3>Summary</h4>
-  <table width="200" cellpadding="0" cellspacing="0" border="0">
+  <table width="280" cellpadding="0" cellspacing="0" border="0">
     <tr>
-      <td>Total Success</td><td><strong>{{ total_success}}</strong></td>
+      <td align="left">Total Success</td><td align="right"><strong>{{ total_success}}</strong></td>
     </tr>
     <tr>
-      <td>Total Failure</td><td><strong>{{ total_failure}}</strong></td>
+      <td align="left">Total Failure</td><td align="right"><strong>{{ total_failure}}</strong></td>
     </tr>
   </table>
   <h3>Breakdown</h4>
   <h4>FP17s</h4>
-  <table width="200" cellpadding="0" cellspacing="0" border="0">
+  <table width="280" cellpadding="0" cellspacing="0" border="0">
     <tr>
-      <td>Success</td><td><strong>{{ fp17_success_count }}</strong></td>
+      <td align="left">Success</td><td align="right"><strong>{{ fp17_success_count }}</strong></td>
     </tr>
     <tr>
-      <td>Failure</td><td><strong>{{ fp17_failure_count }}</strong></td>
+      <td align="left">Failure</td><td align="right"><strong>{{ fp17_failure_count }}</strong></td>
     </tr>
   </table>
   <h4>FP17Os</h4>
-  <table table width="200" cellpadding="0" cellspacing="0" border="0">
+  <table table width="280" cellpadding="0" cellspacing="0" border="0">
     <tr>
-      <td>Success</td><td><strong>{{ fp17o_success_count }}</strong></td>
+      <td align="left">Success</td><td align="right"><strong>{{ fp17o_success_count }}</strong></td>
     </tr>
     <tr>
-      <td>Failure</td><td><strong>{{ fp17o_failure_count }}</strong></td>
+      <td align="left">Failure</td><td align="right"><strong>{{ fp17o_failure_count }}</strong></td>
     </tr>
   </table>
 </body>
