fixes a bug in the btn checkbox where the form validation error was not correctly structured

--- a/odontotheme/templates/_helpers/btn_checkbox.html
+++ b/odontotheme/templates/_helpers/btn_checkbox.html
@@ -7,6 +7,6 @@
     <span ng-show="{{ model }} == 1">X</span>
   </label>
 </div>
-<div ng-show="errors['{{ model_api_name }}']['{{ field_name }}'" class="row content-offset-below-20 content-offset-10 content-offset-below-20 help-block">
+<div ng-show="errors['{{ model_api_name }}']['{{ field_name }}']" class="row content-offset-below-20 content-offset-10 content-offset-below-20 help-block">
     [[ errors['{{ model_api_name }}']['{{ field_name }}'] ]]
 </div>
