Fix the summary page display for fp17s, was showing fp17o...

--- a/odonto/templates/view_summary_fp17.html
+++ b/odonto/templates/view_summary_fp17.html
@@ -5,7 +5,7 @@
         View FP17:
         {% include "partials/patient_title.html" %}
       </h1>
-      {% include "partials/fp17_o_summary.html" with pathway=0 %}
+      {% include "partials/fp17_summary.html" with pathway=0 %}
     </div>
   </div>
 </div>
