the NHS number is required by the FP17 spec, you can't add a patient without it, but lets stop someone deleting the number in the edit...

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -2,7 +2,7 @@
 {% load odonto_forms %}
 <div class="row">
   <div class="col-md-5">
-    {% charfield field="Demographics.nhs_number" label="NHS number" maxlength="10" style="vertical" %}
+    {% charfield field="Demographics.nhs_number" label="NHS number" maxlength="10" style="vertical" required=True %}
   </div>
 </div>
 <div class="row">
