--- a/odonto/templates/records/orthodontic_assessment.html
+++ b/odonto/templates/records/orthodontic_assessment.html
@@ -2,9 +2,7 @@
 <div class="row">
   <div class="col-md-6">
     <table class="table table-striped">
-        {% table_row_field_display "OrthodonticAssessment.assessment_and_review" %}
-        {% table_row_field_display "OrthodonticAssessment.assess_and_refuse_treatment" %}
-        {% table_row_field_display "OrthodonticAssessment.assess_and_appliance_fitted" %}
+        {% table_row_field_display "OrthodonticAssessment.assessment" %}
         {% table_row_field_display "OrthodonticAssessment.iotn" %}
         {% table_row_field_display "OrthodonticAssessment.iotn_not_applicable" %}
         {% table_row_field_display "OrthodonticAssessment.aesthetic_component" %}
