Adds in the extraction chart display in accordance with the users preferences

--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -510,3 +510,13 @@ table.patient-list {
   text-align: center;
   padding: 8px 0px 0px 0px;
 }
+
+.extraction-chart{
+    .upper{
+        border-bottom: 2px solid #ddd;
+    }
+    .patient-right{
+        border-right: 2px solid #ddd;
+        text-align: right;
+    }
+}
