--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -76,6 +76,7 @@ label {
 .btn-default {
   color: #595F72;
 }
+
 .btn-default.active {
   background-color: #A3C9A8;
   border-color: #89ba90;
@@ -174,6 +175,7 @@ label {
   top: 300px;
   margin-left: 25px;
 }
+
 @media (max-width: 991px) {
   #episode-history {
     display: none;
@@ -379,6 +381,7 @@ label {
   background-color: #487DBC;
   height: 100vh;
 }
+
 @media (max-width: 991px) {
   #side-nav {
     display: none;
@@ -399,34 +402,43 @@ label {
   background-color: #487CBC;
   position: fixed;
 }
+
 #side-nav .navbar-nav {
   width: 100%;
 }
+
 #side-nav ul.nav li {
   float: none;
 }
+
 #side-nav ul.nav li i {
   padding-right: 4px;
 }
+
 #side-nav ul.nav li a {
   padding-left: 26px;
 }
+
 #side-nav ul.nav li .badge {
   float: right;
   background-color: white;
   color: #124c91;
 }
+
 #side-nav ul.nav li:hover a, #side-nav ul.nav li a:hover, #side-nav ul.nav li:hover {
   background-color: #2c64a8;
   color: white;
   cursor: pointer;
 }
+
 #side-nav ul.nav li.active, #side-nav ul.nav li.active a {
   background-color: #124c91;
 }
+
 #side-nav hr {
   margin-left: 5%;
 }
+
 #side-nav a {
   color: white;
 }
@@ -469,7 +481,8 @@ table.patient-list {
 .panel {
   border: none;
   background: none;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border-radius: 0px;
 }
 
@@ -507,4 +520,12 @@ table.patient-list {
   padding: 8px 0px 0px 0px;
 }
 
+.extraction-chart .upper {
+  border-bottom: 2px solid #ddd;
+}
+
+.extraction-chart .patient-right {
+  border-right: 2px solid #ddd;
+  text-align: right;
+}
 /*# sourceMappingURL=odonto.css.map */
